Improve build configuration and remove deprecation warnings